--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ body {
 
 #loreGrid {
     display: grid;
+    height: 100vh;
     grid-template-areas:
     'hd'
     'lo'
@@ -174,16 +175,39 @@ body {
 }
 
 #loreHead {
+    display: flex;
     grid-area: hd;
-    background-color: red;
+    height: 10vh;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(0, 0, 0);
+    background: #6d6d6d;
 }
 
 #loreText {
     grid-area: lo;
     background-color: blue;
+    background: url(/img/grilled-cheese-sandwich.jpg);
+    height: 80vh;
 }
 
 #loreBottom {
     grid-area: bt;
-    background-color: green;
+    background-color: #181818;
+    height: 10vh
+}
+
+#loreMain {
+    display: flex;
+    background-color: rgba(0,0,0,0.7);
+    color: rgb(173, 173, 173);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
 }
