--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,19 @@ body {
     padding-right: 10px;
     padding-left: 10px;
 }
+
+@media (min-width: 600px) {
+    #imgMain {
+        background: url(/img/tips-for-perfect-grilled-cheese.png);
+    }
+
+    #loreText {
+        background: url(/img/tips-for-perfect-grilled-cheese.png);
+    }
+}
+
+@media (min-width: 1100px) {
+    #main1 {
+        background: url(/img/grey-gradient-abstract-backgrounds-free-vector.png);
+    }
+}
