--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,45 @@
     display: grid;
     height: auto;
     width: 100%;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 4fr 1fr 1fr;
     grid-template-areas: 
     'im'
     'mn'
+    'fe'
     ;
 }
 
+#igotblackigotwhite {
+    grid-area: fe;
+    background-color: rgb(108, 108, 108);
+    display: flex;
+    flex-direction: row;
+}
+
+#left {
+    height: 100%;
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+    gap: 10px;
+    font-size: 1rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+#right {
+    height: 100%;
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    margin-right: 10px;
+    gap: 20px;
+    font-size: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 #boxthing {
     position: fixed;
@@ -18,6 +50,30 @@
 #imgMeny {
     max-width: 100%;
     max-height: 100%;
+}
+
+#siuu {
+    margin-top: 150px;
+}
+
+.menuthing2 {
+    height: 100%;
+    width: 20%;
+    background: #181818;
+    position: fixed;
+    top: 0;
+    right: -10000px;
+    transition: right 0.3s;
+    box-shadow: 10px 0px 21px -10px rgba(0,0,0,0.75);
+    z-index: 5;
+}
+
+.insidetext {
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-left: 40px;
+    padding-right: 20px;
+    padding-top: 100px;
 }
 
 .menuthing {
@@ -60,7 +116,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.menu-button i.material-icons{
+.menu-button i.material-icons {
     font-size: 2.5rem;
 }
 
@@ -92,6 +148,11 @@ a:active{
 .showMenu {
     left: 0px;
 }
+
+.showMenu2 {
+    right: -1px;
+}
+
 
 .fade-layer{
     position: fixed;
@@ -165,14 +226,34 @@ body {
 
 /* LORE */
 
+#lorebody{
+    margin: 0;
+    overflow-x: hidden;
+}
+
 #loreGrid {
     display: grid;
     height: 100vh;
     grid-template-areas:
     'hd'
     'lo'
+    'bot'
     'bt'
     ;
+}
+
+#bottomText {
+    grid-area: bot;
+    display: flex;
+    background-color: rgba(0,0,0,0.7);
+    color: rgb(173, 173, 173);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 #loreHead {
@@ -190,7 +271,7 @@ body {
 
 #loreText {
     grid-area: lo;
-    background-color: blue;
+    display: flex;
     background: url(/img/grilled-cheese-sandwich.jpg);
     height: 80vh;
 }
@@ -223,18 +304,25 @@ body {
     width: 100%;
     height: 100%;
     margin-left: 0%;
-    padding-right: 10px;
-    padding-left: 10px;  
 }
 
 #orderGrid {
     display: grid;
     height: 100vh;
+    grid-template-columns: 1fr 4fr 1fr;
     grid-template-areas: 
-    'od'
-    'om'
-    'ob'
+    'ol om or'
     ;
+}
+
+#imageright {
+    grid-area: or;
+    background-image: url(/img/right.png);
+}
+
+#imageleft {
+    grid-area: ol;
+    background-image: url(/img/left.png);
 }
 
 #titleOrder {
@@ -244,8 +332,9 @@ body {
 }
 
 .Name {
-    height: 15px;
+    height: 30px;
     margin-left: 10px;
+    border-radius: 5px;
 }
 
 .nameBox {
@@ -257,6 +346,8 @@ body {
 .cheese {
     width: 20px;
     margin-top: 50px;
+    height: 30px;
+    border-radius: 5px;
 }
 
 #orderButton {
@@ -267,11 +358,10 @@ body {
 }
 
 #orderMain {
-    grid-area: lo;
+    grid-area: om;
     background-color: blue;
     background: url(/img/grilled-cheese-sandwich.jpg);
     height: 100vh;
-    width: 100vw;
 }
 
 #rapper {
@@ -324,10 +414,63 @@ body {
     background: #6d6d6d;
 }
 
+#carti {
+    border-radius: 5px;
+}
+
+#card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 220px;
+    width: 1000px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    margin-right: 100px;
+}
+
+  
+#card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#containerino {
+    padding: 2px 16px;
+}
+
 @media (max-width: 600px) {
     #bollar {
         height: 303.6px;
         width: 351.2px;
+    }
+    #left {
+        font-size: 0.7rem;
+    }
+
+    #right {
+        font-size: 0.7rem;
+    }
+
+    #loreMain {
+        font-size: 0.7rem;
+    }
+    .delete {
+        display: none;
+    }
+    #bottomText {
+        display: none;
+
+    }
+    #orderGrid {
+        display: grid;
+        height: 100vh;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        'om'
+        ;
+    }
+    #left {
+        margin-left: 10px;
     }
 }
 
@@ -350,8 +493,17 @@ body {
     }
 
     #orderText {
-        width: 60%;
-        margin-left: 20%;
+        width: 100%;
+    }
+
+    #right {
+        margin-right: 20px;
+    }
+    .menuthing {
+        width: 40%;
+    }
+    .menuList {
+        margin-left: 30px;
     }
 }
 
